--- a/web/template/req.html
+++ b/web/template/req.html
@@ -46,7 +46,8 @@
     </div>
 
     <footer>
-	    <center><h4>Video not playing? Possibly because your browser or the player doesn't support codec. Please download and watch.</h4></center>
+	    <p><h3>Share and Support Us on Telegram</h3></p>
+	    <center><h4>Video not playing? Try reloading the page or Please download and watch.</h4></center>
 	    
     </footer>
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
