--- a/web/template/req.html
+++ b/web/template/req.html
@@ -33,6 +33,7 @@
 <body>
 	
     <header>
+	<center><h1><a href="https://telegram.me/isaimini_updates">Isaimini Prime</h1></center>    
         <marquee bgcolor="#f7f305"
 <div class="toogle"></div>
         <div id="file-name">
