--- a/web/template/req.html
+++ b/web/template/req.html
@@ -33,7 +33,7 @@
 <body>
 	
     <header>
-	<center><h1><a href="https://telegram.me/isaimini_updates">Isaimini Prime</h1></center>    
+	<center><h1><a href="https://telegram.me/isaimini_updates">Isaimini Prime</a></h1></center>    
         <marquee bgcolor="#f7f305"
 <div class="toogle"></div>
         <div id="file-name">
@@ -47,7 +47,7 @@
     </div>
 
     <footer>
-	    <p><h3>Share and Support Us on Telegram</h3></p>
+	    <center><p><h2>Share and Support Us on:-<a href="https://telegram.me/isaimini_updates">  👉Telegram👈</a></h3></p></center>
 	    <center><h4>Video not playing? Try reloading the page or Please download and watch.</h4></center>
 	    
     </footer>
