--- a/web/template/req.html
+++ b/web/template/req.html
@@ -47,8 +47,9 @@
     </div>
 
     <footer>
-	    <center><p><h2>Share and Support Us on:-<a href="https://telegram.me/isaimini_updates">  👉Telegram👈</a></h3></p></center>
 	    <center><h4>Video not playing? Try reloading the page or Please download and watch.</h4></center>
+	    <center><p><h2>Share and Support Us on:-  👉<a href="https://telegram.me/isaimini_updates">Telegram</a>👈</h3></p></center>
+	    <center><p><h3>For Promoting your content and TG Bot development Contact:-   👉<a href="https://telegram.me/isaiminiprime_admin">Admin</a>👈</h3></p></center>
 	    
     </footer>
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
